# p2p_chat

./: CMakeLists.txt  README.md  chat_app.cc  chat_client.cc  chat_server.cc  makefile
app/: CMakeLists.txt  main.cc
app/include/app_core/: chat_controller.h  session_adapter.h  session_manager.h
app/include/gui/: add_host.h  chat_window.h  chat_window.hpp  disconnect.h  gui_manager.h  gui_manager.hpp  main_menu.h  unavailable.h  view.h
app/src/app_core/: chat_controller.cc  session_adapter.cc  session_manager.cc
app/src/gui/: add_host.cc  chat_window.cc  disconnect.cc  gui_manager.cc  main_menu.cc  unavailable.cc
app/ui/: add_host.ui  chat_window.ui  disconnect.ui  main_menu.ui  unavailable.ui
core/: CMakeLists.txt
core/include/chat_core/: session.h
core/include/crypto/: cert_gen.h
core/include/network/: client.h  network.h  server.h
core/include/util/: message.pb.h  util.h
core/src/chat_core/: session.cc
core/src/crypto/: cert_gen.cc
core/src/network/: client.cc  server.cc
core_lib/: CMakeLists.txt
core_lib/include/chat_core/: session.h
core_lib/include/crypto/: cert_gen.h
core_lib/include/network/: client.h  server.h
core_lib/include/util/: util.h
core_lib/proto/: message.proto
core_lib/src/chat_core/: session.cc
core_lib/src/crypto/: cert_gen.cc
core_lib/src/network/: client.cc  server.cc
core_lib/src/util/: message.pb.cc
include/cli/: cli.h  cli_management.h
include/core/: app.h  chat_controller.h  session.h  session_adapter.h
include/gui/: chat_window.hpp  gui_manager.hpp  ip_port_prompt.hpp  port_prompt.hpp  program_mode.h  server_listen_connection.hpp  view.h
include/network/: client.h  network.h  server.h
include/util/: util.h
src/cli/: cli_management.cc
src/core/: app.cc  chat_controller.cc  session.cc  session_adapter.cc
src/gui/: gui_manager.cc  ip_port_prompt.cc  port_prompt.cc  program_mode.cc  server_listen_connection.cc
src/network/: client.cc  server.cc
ssl_test_keys/: cert.pem  key.pem  server.csr  server.key.secure
ssl_test_keys_backup/: dh2048.pem  makefile  server.crt  server.key
tests/: CMakeLists.txt
tests/src/: network_test.cc  session_test.cc  util_test.cc
ui/: chat_window.ui  ip_port_prompt.ui  port_prompt.ui  program_mode.ui  server_listen_connection.ui
